# fs-manager

./: .gitignore  .project  LICENSE  README.md  README.rst  groups  project.config  requirements.txt  setup.cfg  setup.py
src/fs_manager/: __init__.py  fs_manager.py  logger.py
src/fs_manager/tests/: test_directory_and_file.py  test_directory_object.py  test_file_object.py  test_fs_manager.py
