[metadata]
name = fs-manager
version = 0.2.3
summary = This module is designed to relief and simplify interaction of your python modules with the file system.
home-page = https://github.com/FromZeus/fs-manager
description-file =
    README.rst
author =
    Daniil Trishkin
author-email =
    asteroid566@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages_root = src
packages =
    fs_manager
modules =
    fs_manager.fs_manager
    fs_manager.logger

[wheel]
universal = 1
